--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# Not necessary for a library
+Gemfile.lock
